[tool.poetry]
name = "bdantic"
version = "0.1.0"
description = "A package for extending Beancount with Pydantic"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beancount = "^2.3.4"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
