[tool.poetry]
name = "bdantic"
version = "0.2.0"
description = "A package for extending beancount with pydantic"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jmgilman/bdantic"
repository = "https://github.com/jmgilman/bdantic"
keywords = ["beancount", "pydantic", "models"]

[tool.poetry.dependencies]
python = "^3.8"
beancount = "^2.3.4"
pydantic = "^1.9.0"
beancount-stubs = "^0.1.3"
orjson = "^3.6.6"
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
twine = "^3.7.1"
hypothesis = "^6.36.1"
RandomWords = "^0.3.0"
mkdocstrings = "^0.17.0"
mkdocs = "^1.2.3"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
